# Sort

Git/merge-sort-multi/: CMakeLists.txt  main.cpp
Git/merge-sort-single/: CMakeLists.txt  main.cpp
Git/mpi-sort/: CMakeLists.txt  main.cpp  quickSort.h
Git/multi_sorts/: CMakeLists.txt  main.cpp
Git/multi_sorts/BasicSort/: SortFactory.cpp  SortFactory.h
